--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Input Center</title>
+    <title>Artpsy Grupos</title>
     <style>
         body {
             margin: 0;
@@ -41,9 +41,9 @@
 </head>
 <body>
     <div class="container">
-        <input type="text" placeholder="Type something...">
+        <input type="text" placeholder="Digite seu email...">
         <br>
-        <button>Submit</button>
+        <button>Enviar</button>
     </div>
 </body>
 </html>
